--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,16 +3,13 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>EXTJS4.0</title>
+  <link rel="stylesheet" type="text/css" href="resources/css/classic.css" />  
+  <link rel="stylesheet" type="text/css" href="resources/css/ext-all.css" />  
   
-  <link rel="stylesheet" type="text/css" href="resources/css/dept.css" />
-  
-  <link rel="stylesheet" type="text/css" href="resources/css/ext-all.css" />
-  
-  <script type="text/javascript" src="resources/extjs/ext-all-debug.js"></script>
-  
-  <script type="text/javascript" src="app.js"></script>
-  
+  <script type="text/javascript" src="resources/extjs/ext-all-debug.js"></script>  
   <script type="text/javascript" src="resources/js/uuid.js"></script>
+  <script type="text/javascript" src="app.js"></script>  
+  
 </head>
 
 <body>
